# ElectricPy

./: .buildinfo  .coveragerc  .gitchangelog.rc  .gitignore  .readthedocs.yaml  CHANGELOG.html  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  additionalresources.html  bode.html  changes.html  conf.py  constants.html  conversions.html  cspell.json  docs.lnk  electricpy.html  electricpyapi.html  fault.html  genindex.html  gitchangelog.rc  index.html  index.rst  latex.html  make.bat  objects.inv  passive.html  phasor.html  py-modindex.html  pyproject.toml  release-version.py  requirements.txt  search.html  searchindex.js  setup.py  sim.html  (+7 more)
Geometry/: __init__.py  circle.py  triangle.py
Logo/: ElectricpyLogo.pub  Thumbs.db
_autosummary/: electricpy.abc_to_seq.html  electricpy.acpiv.html  electricpy.bode.bode.html  electricpy.bode.html  electricpy.bode.sbode.html  electricpy.bode.zbode.html  electricpy.btu.html  electricpy.btu_to_kwh.html  electricpy.capbacktoback.html  electricpy.capenergy.html  electricpy.captransfer.html  electricpy.characterz.html  electricpy.clatex.html  electricpy.coldjunction.html  electricpy.compose.html  electricpy.convbar.html  electricpy.convolve.html  electricpy.cosfilt.html  electricpy.cprint.html  electricpy.crcremainder.html  electricpy.crcsender.html  electricpy.curdiv.html  electricpy.de_calc.html  electricpy.dynetz.html  electricpy.farads.html  electricpy.fault.busvolt.html  electricpy.fault.correctedcurrents.html  electricpy.fault.ct_cclass.html  electricpy.fault.ct_satratburden.html  electricpy.fault.ct_saturation.html  electricpy.fault.ct_timetosat.html  electricpy.fault.ct_vpeak.html  electricpy.fault.distmeasz.html  electricpy.fault.faultratio.html  electricpy.fault.genlossfield.html  electricpy.fault.highzmini.html  electricpy.fault.highzvpickup.html  electricpy.fault.html  electricpy.fault.indmacheigenvalues.html  electricpy.fault.indmachphs3sc.html  (+141 more)
_modules/: electricpy.html  index.html
_sources/: CHANGELOG.rst.txt  additionalresources.rst.txt  bode.rst.txt  changes.rst.txt  constants.rst.txt  conversions.rst.txt  electricpy.rst.txt  index.rst.txt  phasor.rst.txt  sphinxrequires.txt  visu.rst.txt
_static/: basic.css  classic.css  documentation_options.js
api/: electricpy.abc_to_seq.html  electricpy.acpiv.html  electricpy.air_core_inductor.html  electricpy.bode.bode.html  electricpy.bode.html  electricpy.bode.sbode.html  electricpy.bode.zbode.html  electricpy.btu.html  (+301 more)
(+1475 files in other folders)
